--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,7 +9,9 @@ jobs:
       uses: actions/setup-node@v2
       with:
         node-version: '14'
-    - name: Verify Node.js Version
+    - name: Verify Node.js Version Before
       run: node -v
     - run: npm install
     - run: npm test
+    - name: Verify Node.js Version After
+      run: node -v
