--- a/package.json
+++ b/package.json
@@ -1,19 +1,10 @@
 {
   "name": "kube-playground",
   "version": "1.0.0",
-  "description": "k8s playground",
-  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/TBSimonfi/kube-playground.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/TBSimonfi/kube-playground/issues"
-  },
-  "homepage": "https://github.com/TBSimonfi/kube-playground#readme"
+  "devDependencies": {
+    "jest": "^27.0.0"
+  }
 }
