--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "kube-playground",
   "version": "1.0.0",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "devDependencies": {
     "jest": "^27.0.0"
