--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: Simple CI
+name: CI
 on: [push]
 jobs:
   build:
@@ -15,9 +15,28 @@ jobs:
     - name: Verify Node.js Version
       run: node -v
 
-    - name: Run Custom Script
+    - name: Run ESLint
       run: |
-        echo "Running custom script..."
-        # Add your custom commands here
-        echo "Hello, world!"
-        node -e "console.log('Node.js is working!')"
+        npm install eslint
+        npx eslint .
+
+    - name: Run Jest Tests
+      run: |
+        npm install jest
+        npx jest
+
+    - name: Run npm audit
+      run: npm audit --audit-level=high
+
+    - name: Run Prettier
+      run: |
+        npm install prettier
+        npx prettier --write .
+
+    - name: Send Slack Notification
+      uses: 8398a7/action-slack@v3
+      with:
+        status: ${{ job.status }}
+        fields: repo,commit,author
+      env:
+        SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
