--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,33 +10,20 @@ jobs:
     - name: Set up Node.js
       uses: actions/setup-node@v2
       with:
-        node-version: '14'
+        node-version: '20'
 
     - name: Verify Node.js Version
       run: node -v
 
+    - name: Install ESLint
+      run: npm install eslint
+
     - name: Run ESLint
+      run: npx eslint .
+
+    - name: Run Custom Script
       run: |
-        npm install eslint
-        npx eslint .
-
-    - name: Run Jest Tests
-      run: |
-        npm install jest
-        npx jest
-
-    - name: Run npm audit
-      run: npm audit --audit-level=high
-
-    - name: Run Prettier
-      run: |
-        npm install prettier
-        npx prettier --write .
-
-    - name: Send Slack Notification
-      uses: 8398a7/action-slack@v3
-      with:
-        status: ${{ job.status }}
-        fields: repo,commit,author
-      env:
-        SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+        echo "Running custom script..."
+        # Add your custom commands here
+        echo "Hello, world!"
+        node -e "console.log('Node.js is working!')"
