--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,20 +21,20 @@ jobs:
     - name: Create ESLint Config
       run: |
         echo "Creating ESLint config file..."
-        echo "export default [{" > eslint.config.js
-        echo "  files: ['*.js']," >> eslint.config.js
-        echo "  rules: {" >> eslint.config.js
-        echo "    'semi': ['error', 'always']," >> eslint.config.js
-        echo "    'quotes': ['error', 'double']," >> eslint.config.js
-        echo "  }," >> eslint.config.js
-        echo "  parserOptions: {" >> eslint.config.js
-        echo "    ecmaVersion: 2020," >> eslint.config.js
-        echo "  }," >> eslint.config.js
-        echo "  env: {" >> eslint.config.js
-        echo "    browser: true," >> eslint.config.js
-        echo "    node: true," >> eslint.config.js
-        echo "  }," >> eslint.config.js
-        echo "}];" >> eslint.config.js
+        echo "export default [{" > eslint.config.mjs
+        echo "  files: ['*.js']," >> eslint.config.mjs
+        echo "  rules: {" >> eslint.config.mjs
+        echo "    'semi': ['error', 'always']," >> eslint.config.mjs
+        echo "    'quotes': ['error', 'double']," >> eslint.config.mjs
+        echo "  }," >> eslint.config.mjs
+        echo "  parserOptions: {" >> eslint.config.mjs
+        echo "    ecmaVersion: 2020," >> eslint.config.mjs
+        echo "  }," >> eslint.config.mjs
+        echo "  env: {" >> eslint.config.mjs
+        echo "    browser: true," >> eslint.config.mjs
+        echo "    node: true," >> eslint.config.mjs
+        echo "  }," >> eslint.config.mjs
+        echo "}];" >> eslint.config.mjs
 
     - name: Run ESLint
       run: npx eslint .
