--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "kube-playground",
   "version": "1.0.0",
+  "type": "module",  // Add this line
   "scripts": {
     "test": "jest"
   },
   "devDependencies": {
-    "jest": "^27.0.0"
+    "jest": "^27.0.0",
+    "eslint": "^9.21.0"
   }
 }
